@startuml


LibraryStorageCommon "1" *-- "1" LibraryStorageLinkedList
LibraryStorageCommon "1" *-- "1" LibraryStorageHashMap

LibraryStorageHashMap --|> LibraryStorage
LibraryStorageHashMap --|> MyHashMap

LibraryStorageLinkedList --|> LibraryStorage
LibraryStorageLinkedList --|> MyLinkedList

class LibraryStorageCommon <<Proxy>> <<Singleton>> {
}

interface LibraryStorage {
    + void add(Song song)
}
class LibraryStorageLinkedList
class LibraryStorageHashMap
class MyLinkedList
class MyHashMap
class Song {
    - title: String
    - artist: String
    - album: String
    - genre: String
    - trackingNumber: int
    - playCount: int
    - rating: int
    + Song(String title, String artist, String album, String genre, int trackingNumber)
}

note right of MyLinkedList : Jay
@enduml
